@@ -1,3 +1,12 @@
+2006-12-13  Peter Teichman  <peter@novell.com>
+
+	* src/Banshee.Base/ActionManager.cs:
+	* src/Banshee.Base/Banshee.Burner/BurnerCore.cs:
+	* src/Banshee.Base/Banshee.SmartPlaylist/SmartPlaylistCore.cs:
+	* src/Banshee.Plugins/Audioscrobbler/AudioscrobblerPlugin.cs:
+	Add menu accelerators for actions that haven't had them.
+	(Fixes BNC #202861)
+
 2006-12-13  Aaron Bockover  <abock@gnome.org>
 
 	* src/Banshee.Plugins/NotificationAreaIcon/NotificationAreaIconPlugin.cs:
